--- a/locales/en/login.yml
+++ b/locales/en/login.yml
@@ -3,3 +3,6 @@ signup: "Sign up."
 login: "Login"
 email: "EMail"
 password: "Password"
+loginFailed:
+  headline: "Login Failed"
+  content: "No user with this email address and password found."
